circiut breaker status codes